# python-telegram-menu

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
src/python-telegram-menu/: core.py  data.py  version.py
src/python_telegram_menu/: __init__.py  _version.py  commandline.py  core.py  handler.py  session.py  version.py
tests/: dispatcher.py  hahdler.py  handler.py  test_cli.py  test_import.py
