[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | .eggs
  | build
)/
'''

[tool.check-manifest]
ignore = [
    'examples/**',
    'tests/**',
    'binder/**',
    '.*',
    'pyproject.toml',
    'pytest.ini',
    'CODE_OF_CONDUCT.md',
]

[build-system]
requires = ["setuptools>=46.1.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"
