[metadata]
name = python_telegram_menu
version = 0.0.1
description = Python package for creating menus based on Telegram Bot API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyrepo-git/python_telegram_menu
author = Valeri Zimin
author_email = author.name@email.com
license = Apache
license_file = LICENSE
keywords = python template telegram menu
project_urls =
    Documentation = https://github.com/pyrepo-git/python_telegram_menu/
    Source = https://github.com/pyrepo-git/python_telegram_menu
    Tracker = https://github.com/pyrepo-git/python_telegram_menu/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3.10

[bdist_wheel]
universal = 1

[options]
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    click>=6.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    python_telegram_menu = python_telegram_menu.commandline:python_telegram_menu

[build_sphinx]
project = python_telegram_menu
source-dir = docs
build-dir = docs/_build
all-files = 1
warning-is-error = 1
