[metadata]
name = python-telegram-menu
#version =  python_telegram_menu.__version__
description = Python package for creating menus based on Telegram Bot API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyrepo-git/python_telegram_menu
author = Valeri Zimin
author_email = author.name@email.com
license = Apache
license_files = LICENSE
keywords = python template telegram menu
project_urls =
    Documentation = https://github.com/pyrepo-git/python-telegram-menu/
    Source = https://github.com/pyrepo-git/python-telegram-menu
    Tracker = https://github.com/pyrepo-git/python-telegram-menu/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3.10

[bdist_wheel]
universal = 1

[options]
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    click

[options.packages.find]
where = src

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = postgraas_server.module:function
# For example:
console_scripts =
    python_telegram_menu = python_telegram_menu.commandline:main
# as well as other entry_points.

[flake8]
ignore = D203
exclude =
  .git,
  __pycache__,
  docs/source/conf.py,
  old,
  build,
  dist
max-complexity = 10
  
[build_sphinx]
project = python_telegram_menu
source-dir = docs
build-dir = docs/_build
all-files = 1
warning-is-error = 1
